# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
alekctimc_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_progressive.py  calc.py  even.py  gcd.py  is_prime.py  prime.py  progression.py  progressive.py
brain_games/scripts/: brain_even.py  brain_games.py  game_brain_calc.py  game_brain_even.py  game_brain_gcd.py  game_brain_progressive.py  game_calc.py  game_even.py  game_gcd.py  game_is_prime.py  game_prime.py  game_progression.py  game_progressive.py
