[tool.poetry]
name = "AlekcTimc_brain_games"
version = "1.4.8"
description = "Test project on Hexlet"
authors = ["atimchenko <taa@nic.ru>"]
repository = "https://github.com/AleksTimc/python-project-lvl1"
packages = [
  { include = "brain_games" },]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"
sympy = "^1.6"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
flake8 = "^3.8.1"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_games:sec"
brain-calc = "brain_games.scripts.brain_games:main"
brain-gcd = "brain_games.scripts.brain_games:gcd_game"
brain-progressive = "brain_games.scripts.brain_games:progressive_game"
brain-isprime = "brain_games.scripts.brain_games:isprime_game"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
